# ai-hackathon-use-cases

./: .gitignore  ACCESS_QUICKSTART.md  CLAUDE.md  COLLABORATION.md  CONTRIBUTING.md  EVAL_GUIDE.md  GITHUB_SETUP_INSTRUCTIONS.md  MESSAGE_FOR_COWORKER.md  PRESENTATION_GUIDE.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SAMPLE_CONTENT_SUMMARY.md  SPEC_TEMPLATE.md  constituent-services-agent.spec.md  emergency-response-agent.spec.md  eval_config.py  inter-agency-knowledge-hub.spec.md  nys-hackathon-refactor-prompt.md  red_team.yaml  red_team_cases.jsonl  test_cases.jsonl
Constituent-Services-Agent/: .env.example  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
Constituent-Services-Agent/sample_data/nys_agencies/: dmv.json  dol.json  otda.json
Constituent-Services-Agent/src/: __init__.py  main.py
Constituent-Services-Agent/src/agent/: __init__.py  constituent_agent.py  foundry_iq_client.py
Constituent-Services-Agent/src/api/: __init__.py  middleware.py  routes.py
Constituent-Services-Agent/src/config/: __init__.py  settings.py
Constituent-Services-Agent/src/models/: __init__.py  conversation.py  interaction_log.py  knowledge_source.py
Constituent-Services-Agent/src/services/: __init__.py  knowledge_service.py
Constituent-Services-Agent/static/: chat.js  index.html  styles.css
Constituent-Services-Agent/tests/: __init__.py
Constituent-Services-Agent/tests/e2e/: __init__.py  test_api_e2e.py
Constituent-Services-Agent/tests/unit/: __init__.py  test_constituent_agent.py  test_knowledge_service.py  test_routes.py
Document-Eligibility-Agent/: .env.example  README.md  demo.py  execution_script.md  pyproject.toml  requirements.txt  run_all_tests.py
Document-Eligibility-Agent/assets/sample_documents/: pay_stub_maria_rodriguez.txt  social_security_statement_carlos_rivera.txt  tax_return_2023_michael_torres.txt  unemployment_benefits_robert_martinez.txt
Document-Eligibility-Agent/assets/sample_emails/: snap_application_maria.txt
Document-Eligibility-Agent/sample_documents/: README.md
Document-Eligibility-Agent/src/: __init__.py  main.py
Document-Eligibility-Agent/src/agent/: __init__.py  document_processor.py  extraction_agent.py  validation_agent.py
Document-Eligibility-Agent/src/api/: __init__.py  middleware.py  routes.py
Document-Eligibility-Agent/src/config/: __init__.py  settings.py
Document-Eligibility-Agent/src/models/: __init__.py  document.py  document_types.py  extraction.py  extraction_model.py  processing_log.py  validation_rule.py
Document-Eligibility-Agent/src/plugins/: document_processing_plugins.py
Document-Eligibility-Agent/src/services/: __init__.py  audit_service.py  document_intelligence.py  email_processor.py  email_service.py  storage_service.py
Document-Eligibility-Agent/static/: index.html  queue.js  styles.css
Document-Eligibility-Agent/tests/: __init__.py  test_core_components.py  test_integration.py  test_plugins.py  test_setup.py
Document-Eligibility-Agent/tests/e2e/: __init__.py  conftest.py  test_api_e2e.py
Document-Eligibility-Agent/tests/unit/: __init__.py  test_document_processor.py  test_models.py  test_routes.py  test_validation_agent.py
Emergency-Response-Agent/: .env.example  .gitignore  README.md  RELEASE_NOTES.md  demo.py  execution_script.md  pyproject.toml  requirements.txt  step_by_step.md
Emergency-Response-Agent/assets/response_templates/: hurricane_response_template.json  public_health_emergency_template.json
Emergency-Response-Agent/assets/scenario_simulations/: hurricane_category2_scenario.json
Emergency-Response-Agent/src/: __init__.py  main.py
Emergency-Response-Agent/src/api/: __init__.py  routes.py
Emergency-Response-Agent/src/config/: __init__.py  settings.py
Emergency-Response-Agent/src/models/: __init__.py  emergency_models.py
Emergency-Response-Agent/src/orchestration/: __init__.py  emergency_coordinator.py
Emergency-Response-Agent/src/services/: __init__.py  search_service.py  traffic_service.py  weather_service.py
Emergency-Response-Agent/static/: dashboard.js  index.html  styles.css
Emergency-Response-Agent/tests/: __init__.py  test_emergency_coordinator.py  test_integration.py  test_models.py  test_setup.py  test_weather_service.py
Inter-Agency-Knowledge-Hub/: .coverage  .env.example  README.md  demo.py  pyproject.toml  requirements.txt
Inter-Agency-Knowledge-Hub/assets/: review_criteria.json
Inter-Agency-Knowledge-Hub/assets/agency_configs/: dmv.json
Inter-Agency-Knowledge-Hub/assets/compliance/: retention_policy.md
Inter-Agency-Knowledge-Hub/assets/sample_queries/: test_queries.json
Inter-Agency-Knowledge-Hub/data/: audit.db
Inter-Agency-Knowledge-Hub/src/: __init__.py  main.py
Inter-Agency-Knowledge-Hub/src/config/: __init__.py  settings.py
Inter-Agency-Knowledge-Hub/src/core/: __init__.py  auth.py  citation_builder.py  permission_filter.py  search_engine.py
Inter-Agency-Knowledge-Hub/src/db/: __init__.py  database.py
Inter-Agency-Knowledge-Hub/src/middleware/: __init__.py  auth_middleware.py  error_handler.py
Inter-Agency-Knowledge-Hub/src/models/: __init__.py  agency.py  audit.py  cross_reference.py  document.py  enums.py  review.py  search.py  user.py
Inter-Agency-Knowledge-Hub/src/plugins/: __init__.py
Inter-Agency-Knowledge-Hub/src/routes/: __init__.py  agencies.py  audit.py  documents.py  health.py  reviews.py  search.py  user.py
Inter-Agency-Knowledge-Hub/src/services/: __init__.py  audit_service.py  cross_reference_service.py  review_service.py  search_service.py
Inter-Agency-Knowledge-Hub/tests/: __init__.py  conftest.py
Inter-Agency-Knowledge-Hub/tests/contract/: __init__.py
Inter-Agency-Knowledge-Hub/tests/integration/: __init__.py
Inter-Agency-Knowledge-Hub/tests/unit/: __init__.py  (+4 more)
Policy-Compliance-Checker/: .env.example  CHANGELOG.md  README.md  RELEASE_NOTES.md  TEST_RESULTS_SUMMARY.md  demo.py  pyproject.toml  requirements.txt  run_all_tests.py  step_by_step.md
Policy-Compliance-Checker/src/: __init__.py  main.py
Policy-Compliance-Checker/tests/: __init__.py  test_plugins.py
(+270 files in other folders)
