[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inter-agency-knowledge-hub"
version = "0.1.0"
description = "Cross-agency document search system with permission-aware responses using Microsoft Foundry IQ"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "NYC Office of Technology and Innovation"}
]
keywords = ["ai", "search", "government", "knowledge-management", "semantic-kernel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Government",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "semantic-kernel>=1.37.0",
    "azure-search-documents>=11.6.0",
    "azure-identity>=1.19.0",
    "msal>=1.31.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "aiosqlite>=0.21.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.9.2",
]

[project.scripts]
knowledge-hub = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
